[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
obstacle_scene = ExtResource( 2 )

[node name="ObstaclePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2( 1024, 600 )
rotation = -3.14156

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
